--- a/src/app/Layout/Header.module.scss
+++ b/src/app/Layout/Header.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   padding: 10px 20px;
   .userImg {
     width: 50px;
