--- a/src/app/HOCs/Shared/Centered/Centered.module.scss
+++ b/src/app/HOCs/Shared/Centered/Centered.module.scss
@@ -36,3 +36,9 @@
   justify-content: center;
   width: 100%;
 }
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
