--- a/src/app/HOCs/Shared/StatusMessage/StatusMessage.module.scss
+++ b/src/app/HOCs/Shared/StatusMessage/StatusMessage.module.scss
@@ -1,8 +1,21 @@
 .statusMessage {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #000;
-  padding: 8%;
+  bottom: 2vh;
+  right: 1vw;
+  padding: 10px 20px;
+
+  display: flex;
+  align-items: center;
+
+  border-radius: 12px;
+
+  .message {
+    margin-right: 10px;
+  }
+}
+.fullfiled {
+  background-color: rgba(0, 255, 0, 0.3);
+}
+.error {
+  background-color: rgba(255, 0, 0, 0.3);
 }
