--- a/src/app/components/Input/Input.module.scss
+++ b/src/app/components/Input/Input.module.scss
@@ -1,4 +1,8 @@
 .input {
   background-color: #fff;
   color: #000;
+  border: 2px solid;
+  border-radius: 12px;
+  font-size: 1.5rem;
+  padding: 0.1rem;
 }
