--- a/src/app/features/dreams/components/list/AudiosList/Audio/Audio.module.scss
+++ b/src/app/features/dreams/components/list/AudiosList/Audio/Audio.module.scss
@@ -4,3 +4,11 @@
 .private {
   background-color: red;
 }
+.downloadLink {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+// td:first-child {
+//   width: 60%;
+// }
