--- a/src/app/features/dreams/components/list/AudiosList/AudiosList.module.scss
+++ b/src/app/features/dreams/components/list/AudiosList/AudiosList.module.scss
@@ -1,9 +1,17 @@
 .table {
   width: 100%;
+  table-layout: auto;
 
-  td {
+  td,
+  tr,
+  th {
     border: 1px #fff solid;
     padding: 10px;
-    width: 25%;
+    // width: 25%;
+  }
+  th:not(.minWidth),
+  tr:not(.minWidth),
+  td:not(.minWidth) {
+    width: 100%;
   }
 }
