--- a/src/app/features/dreams/components/new/UploadAudio/UploadAudio.module.scss
+++ b/src/app/features/dreams/components/new/UploadAudio/UploadAudio.module.scss
@@ -7,11 +7,11 @@
   padding: 2rem;
   gap: 2rem;
   background-color: #1a1a1a;
-  border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
   border: 1px solid #333;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 5vh auto;
   transition: all 0.3s ease;
 
   .previewContainer {
@@ -47,6 +47,7 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
+        cursor: pointer;
 
         h3 {
           margin: 0;
