--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,7 +16,8 @@
   }
 }
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
+  // font-family: 'Poppins', sans-serif;
 }
 
 body {
