--- a/src/app/features/dreams/components/shared/Spinner/Spinner.module.scss
+++ b/src/app/features/dreams/components/shared/Spinner/Spinner.module.scss
@@ -1,4 +1,4 @@
-@import './../../animations.scss';
+@import './../../../../../animations.scss';
 
 .loading {
   animation: rotating 2s linear infinite;
