--- a/src/app/features/dreams/components/new/UploadAudio/UploadAudio.module.scss
+++ b/src/app/features/dreams/components/new/UploadAudio/UploadAudio.module.scss
@@ -6,7 +6,7 @@
   min-height: 80vh;
   padding: 2rem;
   gap: 2rem;
-  background-color: #1a1a1a;
+  background-color: #363636;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   border-radius: 12px;
   border: 1px solid #333;
