--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,19 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  background-color: #3b3a3a;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    // --background-start-rgb: 0, 0, 0;
+    // --background-end-rgb: 0, 0, 0;
   }
 }
 * {
+  font-color: #fff;
   font-family: 'Rubik', sans-serif;
   // font-family: 'Poppins', sans-serif;
 }
