--- a/src/app/features/dreams/components/new/RecordAudio/RecordAudio.module.scss
+++ b/src/app/features/dreams/components/new/RecordAudio/RecordAudio.module.scss
@@ -7,4 +7,37 @@
   border-radius: 12px;
 
   cursor: pointer;
+
+  .recorderStyles {
+    box-shadow: none;
+    background-color: var(--main-background-color);
+    color: var(--main-icon-color);
+    border: 1px solid #444;
+
+    &:hover {
+      outline: none;
+      border-color: var(--active-color);
+      box-shadow: 0 0 0 3px rgba(var(--active-rgb), 0.3);
+    }
+  }
+
+  .recorderIcon {
+    cursor: pointer;
+    transition: all 0.2s ease;
+    filter: var(--main-icon-color-filter);
+  }
+
+  .recorderIcon:hover {
+    transform: scale(1.5);
+  }
+
+  .timerStyles {
+    color: var(--main-icon-color);
+    font-size: 1.2rem;
+  }
+
+  .statusStyles {
+    color: var(--main-icon-color);
+    font-weight: bold;
+  }
 }
