--- a/src/app/features/dreams/components/list/SortBy/SortBy.module.scss
+++ b/src/app/features/dreams/components/list/SortBy/SortBy.module.scss
@@ -1,5 +1,4 @@
-.sortBy {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .sortBy {
+    display: flex;
+    overflow: hidden;
+  }
